# snippets

./: LICENSE  README.md
bash/: cfg-install
cpp/: Untitled Diagram.drawio
cpp/catch2/: CMakeLists.txt
cpp/catch2/tests/: CMakeLists.txt  adder_test.cpp
